--- a/Day 2/Question 1/index.html
+++ b/Day 2/Question 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+    <title>Assignment Question 1</title>
 </head>
 <body>
     Program to search for a particular character in a string
