--- a/Day 6/Question 1/index.html
+++ b/Day 6/Question 1/index.html
@@ -18,7 +18,7 @@
             width: 70%;
             margin-left: 15%;
             margin-right: 15%;
-            background-color: bisque;
+            background-color: rgb(192, 150, 121);
             padding-bottom: 10%;
     
         }
