--- a/Day 6/Question 2/index.html
+++ b/Day 6/Question 2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Project</title>
+    <title>Question 2</title>
 </head>
 <style>
     .container{
-        background-color: navy;
-        color: oldlace;
+        background-color: rgb(233, 164, 147);
+        color: rgb(0, 0, 0);
         text-align: center;
         width: 800px;
         height: 600px;
@@ -80,6 +80,6 @@
          </tbody>
         </table>
     </div>
-    <script src='project2.js'></script>
+    <script src='index.js'></script>
 </body>
 </html>
